<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

        <com.google.android.material.card.MaterialCardView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            style="@style/MaterialCardViewProperties"
            tools:targetApi="lollipop">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    android:src="@drawable/diu_logo_with_name"
                    android:scaleType="fitCenter"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_defense_registration_instructions"
                    android:layout_marginTop="8dp"
                    style="@style/HeadingProperties"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true"
                    android:justificationMode="inter_word"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/details_title_defense_registration_instructions"
                    tools:targetApi="o" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_defense_registration_process"
                    style="@style/HeadingProperties"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textIsSelectable="true"
                    android:justificationMode="inter_word"
                    android:text="@string/details_title_defense_registration_process"
                    tools:targetApi="o" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stepping_to_the_registration"
                    style="@style/HeadingProperties"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textIsSelectable="true"
                    android:justificationMode="inter_word"
                    android:text="@string/details_stepping_to_the_registration"
                    tools:targetApi="o" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cautions"
                    style="@style/HeadingProperties"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:textIsSelectable="true"
                    android:justificationMode="inter_word"
                    android:text="@string/details_cautions"
                    tools:targetApi="o" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.card.MaterialCardView>

</androidx.core.widget.NestedScrollView>