<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_rule"
            android:icon="@drawable/ic_rules"
            android:title="@string/rules_and_regulations" />

        <item
            android:id="@+id/nav_topic_teacher"
            android:icon="@drawable/ic_menu_topic_teacher"
            android:title="@string/topics_and_supervisors" />
    </group>

    <item android:title="Authenticate">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_title_defense_registration"
                    android:icon="@drawable/ic_title_defense_registration"
                    android:title="Title Defense Registration"
                    android:visible="false"/>

                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/ic_login"
                    android:title="Login" />
            </group>
        </menu>
    </item>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />

            <item
                android:id="@+id/nav_feedback_email"
                android:icon="@drawable/ic_menu_send"
                android:title="Feedback" />
        </menu>
    </item>

</menu>
