<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextInputLayoutProperties">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/to"
            android:imeOptions="actionNext"
            android:inputType="textWebEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextInputLayoutProperties">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusedByDefault="true"
            android:hint="@string/subject"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            tools:targetApi="o" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextInputLayoutProperties">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/body"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.appcompat.widget.LinearLayoutCompat>