<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="3dp"
    tools:context=".fragments.TitleDefenseRegistrationOneFragment">

    <androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

            <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    style="@style/MaterialCardViewProperties">

                    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="8dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textVie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Basic Information (Read Carefully)"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/colorForBold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Choose the total number of students in your group. (In case of having 4 members in a team, you need to take the permission from honorable Head of the department through proper application, and have to fill up a different form which is available in CSE department, then you need not to fill up this form anymore)"
                    android:textAppearance="?android:textAppearanceSmall" />

                    </androidx.appcompat.widget.LinearLayoutCompat>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    style="@style/MaterialCardViewProperties">

                    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="8dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of_students"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorForBold" />

                <RadioGroup
                    android:id="@+id/rgNumberOfStudents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbStudentNumberOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbStudentNumberTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbStudentNumberThree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="3" />
                </RadioGroup>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/day_evening"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorForBold" />

                <RadioGroup
                    android:id="@+id/rgDayEvening"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Day" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbEvening"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Evening" />
                </RadioGroup>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/project_internship"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorForBold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/internship_is_applicable_for_evening_student_only_if_any"
                    android:textAppearance="?android:textAppearanceSmall" />

                <RadioGroup
                    android:id="@+id/rgProjectInternship"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbProject"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/project" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbInternship"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/internship" />
                </RadioGroup>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/project_internship_type"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorForBold" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spProjectInternship"
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/project_internship_title"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorForBold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilProjectInternshipTitle"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:errorEnabled="true"
                    style="@style/TextInputLayoutProperties">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etProjectInternshipTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elevation="8dp"
                        android:focusableInTouchMode="true"
                        android:hint="Title"
                        android:imeOptions="actionGo"
                        android:inputType="text"
                        android:maxLines="1"
                        tools:targetApi="lollipop" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnNextPageOne"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="Next"
                        style="@style/MaterialButtonProperties"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|end"
                        android:layout_marginEnd="8dp"
                        android:text="Page 1 of 3"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.google.android.material.card.MaterialCardView>

            </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>